--- a/src/Smartstore.Web/Views/Shared/Components/CookieManager/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/CookieManager/Default.cshtml
@@ -44,18 +44,16 @@
                         <div class="cm-consent-switch col col-auto">
                             <input type="checkbox" asp-for="RequiredConsent" disabled sm-switch="true" aria-labelledby="cookie-required-header" />
                         </div>
-                        <h5 id="cookie-required-header" 
-                            class="cm-consent-title collapsed col m-0 pl-3" 
-                            data-toggle="collapse" 
-                            data-target="#required-cookies" 
-                            aria-controls="required-cookies" 
-                            aria-expanded="false">
+                        <button id="cookie-required-header" class="cm-consent-title collapsed col m-0 pl-3 reset fs-h5" type="button"
+                                data-toggle="collapse" data-target="#required-cookies"
+                                aria-controls="required-cookies" aria-expanded="false" role="heading" aria-level="5">
                             @T("CookieManager.Dialog.Required.Heading")
                             <i class="fas fa-angle-up collapse-chevron"></i>
-                        </h5>
+                        </button>
                     </div>
 
-                    <div id="required-cookies" class="collapse nav-collapse small" data-parent="#cookie-manager">
+                    <div id="required-cookies" class="collapse nav-collapse small" data-parent="#cookie-manager"
+                         role="region" aria-labelledby="cookie-required-header" aria-hidden="true">
                         <p class="cm-consent-intro">
                             @T("CookieManager.Dialog.Required.Intro")
                         </p>
@@ -76,18 +74,16 @@
                         <div class="cm-consent-switch col col-auto">
                             <input type="checkbox" asp-for="AnalyticsConsent" sm-switch="true" aria-labelledby="cookie-analytics-header" />
                         </div>
-                        <h5 id="cookie-analytics-header" 
-                            class="cm-consent-title collapsed col m-0 pl-3" 
-                            data-toggle="collapse" 
-                            data-target="#analytics-cookies"
-                            aria-controls="analytics-cookies" 
-                            aria-expanded="false">
+                        <button id="cookie-analytics-header" class="cm-consent-title collapsed col m-0 pl-3 reset fs-h5" type="button"
+                                data-toggle="collapse" data-target="#analytics-cookies"
+                                aria-controls="analytics-cookies" aria-expanded="false" role="heading" aria-level="5">
                             @T("CookieManager.Dialog.Analytics.Heading")
                             <i class="fas fa-angle-up collapse-chevron"></i>
-                        </h5>
+                        </button>
                     </div>
 
-                    <div id="analytics-cookies" class="collapse nav-collapse small" data-parent="#cookie-manager">
+                    <div id="analytics-cookies" class="collapse nav-collapse small" data-parent="#cookie-manager"
+                         role="region" aria-labelledby="cookie-analytics-header" aria-hidden="true">
                         <p class="cm-consent-intro">
                             @T("CookieManager.Dialog.Analytics.Intro")
                         </p>
@@ -108,18 +104,16 @@
                         <div class="cm-consent-switch col col-auto">
                             <input type="checkbox" asp-for="ThirdPartyConsent" sm-switch="true" aria-labelledby="cookie-thirdparty-header" />
                         </div>
-                        <h5 id="cookie-thirdparty-header" 
-                            class="cm-consent-title collapsed col m-0 pl-3" 
-                            data-toggle="collapse" 
-                            data-target="#third-party-cookies" 
-                            aria-controls="third-party-cookies" 
-                            aria-expanded="false">
+                        <button id="cookie-thirdparty-header" class="cm-consent-title collapsed col m-0 pl-3 reset fs-h5" type="button"
+                            data-toggle="collapse" data-target="#third-party-cookies" 
+                            aria-controls="third-party-cookies" aria-expanded="false" role="heading" aria-level="5">
                             @T("CookieManager.Dialog.ThirdParty.Heading")
                             <i class="fas fa-angle-up collapse-chevron"></i>
-                        </h5>
+                        </button>
                     </div>
 
-                    <div id="third-party-cookies" class="collapse nav-collapse small" data-parent="#cookie-manager">
+                    <div id="third-party-cookies" class="collapse nav-collapse small" data-parent="#cookie-manager"
+                         role="region" aria-labelledby="cookie-thirdparty-header" aria-hidden="true">
                         <p class="cm-consent-intro">
                             @T("CookieManager.Dialog.ThirdParty.Intro")
                         </p>
@@ -140,18 +134,16 @@
                         <div class="cm-consent-switch col col-auto">
                             <input type="checkbox" asp-for="AdUserDataConsent" sm-switch="true" aria-labelledby="cookie-aduserdataconsent-header" />
                         </div>
-                        <h5 id="cookie-aduserdataconsent-header" 
-                            class="cm-consent-title collapsed col m-0 pl-3" 
-                            data-toggle="collapse" 
-                            data-target="#ad-user-data-consent" 
-                            aria-controls="ad-user-data-consent" 
-                            aria-expanded="false">
+                        <button id="cookie-aduserdataconsent-header" class="cm-consent-title collapsed col m-0 pl-3 reset fs-h5" type="button"
+                            data-toggle="collapse" data-target="#ad-user-data-consent" 
+                            aria-controls="ad-user-data-consent" aria-expanded="false" role="heading" aria-level="5">
                             @T("CookieManager.Dialog.AdUserDataConsent.Heading")
                             <i class="fas fa-angle-up collapse-chevron"></i>
-                        </h5>
+                        </button>
                     </div>
 
-                    <div id="ad-user-data-consent" class="collapse nav-collapse small" data-parent="#cookie-manager">
+                    <div id="ad-user-data-consent" class="collapse nav-collapse small" data-parent="#cookie-manager"
+                         role="region" aria-labelledby="cookie-aduserdataconsent-header" aria-hidden="true">
                         <p class="cm-consent-intro">
                             @T("CookieManager.Dialog.AdUserDataConsent.Intro")
                         </p>
@@ -172,18 +164,16 @@
                         <div class="cm-consent-switch col col-auto">
                             <input type="checkbox" asp-for="AdPersonalizationConsent" sm-switch="true" aria-labelledby="cookie-adpersonalizationconsent-header" />
                         </div>
-                        <h5 id="cookie-adpersonalizationconsent-header" 
-                            class="cm-consent-title collapsed col m-0 pl-3" 
-                            data-toggle="collapse" 
-                            data-target="#ad-personalization-consent" 
-                            aria-controls="ad-personalization-consent" 
-                            aria-expanded="false">
+                        <button id="cookie-adpersonalizationconsent-header" class="cm-consent-title collapsed col m-0 pl-3 reset fs-h5" type="button"
+                            data-toggle="collapse" data-target="#ad-personalization-consent" 
+                            aria-controls="ad-personalization-consent" aria-expanded="false" role="heading" aria-level="5">
                             @T("CookieManager.Dialog.AdPersonalizationConsent.Heading")
                             <i class="fas fa-angle-up collapse-chevron"></i>
-                        </h5>
+                        </button>
                     </div>
 
-                    <div id="ad-personalization-consent" class="collapse nav-collapse small" data-parent="#cookie-manager">
+                    <div id="ad-personalization-consent" class="collapse nav-collapse small" data-parent="#cookie-manager"
+                         role="region" aria-labelledby="cookie-adpersonalizationconsent-header" aria-hidden="true">
                         <p class="cm-consent-intro">
                             @T("CookieManager.Dialog.AdPersonalizationConsent.Intro")
                         </p>
@@ -237,6 +227,10 @@
             }
 
             Smartstore.Cmp.Form.submit();
+        });
+
+        $(".cm-consent-title").on('ak-toggle-open ak-toggle-close', function (e) {
+            $(this).trigger("click");
         });
     });
 </script>
