--- a/src/Smartstore.Web/Views/Shared/Partials/_CheckUsernameAvailability.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/_CheckUsernameAvailability.cshtml
@@ -51,7 +51,11 @@
 </script>
 
 <span class="input-group-append">
-    <button type="button" id="check-availability-button" class="btn btn-secondary btn-icon check-username-availability-button tooltip-toggle" title="@T("Account.CheckUsernameAvailability.Button")">
-        <i class="fa fa-question-circle"></i>
+    <button id="check-availability-button"
+            type="button" 
+            class="btn btn-secondary btn-icon check-username-availability-button tooltip-toggle" 
+            title="@T("Account.CheckUsernameAvailability.Button")"
+            aria-label="@T("Account.CheckUsernameAvailability.Button")">
+        <i class="fa fa-question-circle" aria-hidden="true"></i>
     </button>
 </span>
