--- a/src/Smartstore.Web/Views/Customer/ReturnRequests.cshtml
+++ b/src/Smartstore.Web/Views/Customer/ReturnRequests.cshtml
@@ -1,4 +1,5 @@
-﻿@using Smartstore.Web.Models.Customers;
+﻿@using Smartstore.Web.Models.Customers
+@using Smartstore.Utilities.Html
 
 @model CustomerReturnRequestsModel
 
@@ -10,28 +11,38 @@
     ViewBag.PageTitle = T("Account.CustomerReturnRequests").Value;
 }
 
-<div class="return-request-grid">
+<ul class="return-request-grid list-unstyled" aria-labelledby="myaccount-header">
     @foreach (var item in Model.Items)
     {
-        <div class="card shadow-sm return-request-item mb-3">
-            <div class="card-body">
-                <h4 class="card-title mb-4">@T("Account.CustomerReturnRequests.Title", item.Id, item.ReturnRequestStatus)</h4>
-                <dl class="row mb-0">
-                    <dt class="col-sm-4 font-weight-400 text-muted">@T("Account.CustomerReturnRequests.Item")</dt>
-                    <dd class="col-sm-8">
-                        <span>@item.Quantity x</span>
-                        <a href="@item.ProductUrl" title="@T("Products.Details")" sm-language-attributes-for="item.ProductName">@item.ProductName</a>
-                    </dd>
-                    <dt class="col-sm-4 font-weight-400 text-muted">@T("Account.CustomerReturnRequests.Reason")</dt>
-                    <dd class="col-sm-8">@item.ReturnReason</dd>
-                    <dt class="col-sm-4 font-weight-400 text-muted">@T("Account.CustomerReturnRequests.Action")</dt>
-                    <dd class="col-sm-8">@item.ReturnAction</dd>
-                    <dt class="col-sm-4 font-weight-400 text-muted">@T("Account.CustomerReturnRequests.Date")</dt>
-                    <dd class="col-sm-8">@item.CreatedOn.ToNativeString()</dd>
-                    <dt class="col-sm-4 font-weight-400 text-muted">@T("Account.CustomerReturnRequests.Comments")</dt>
-                    <dd class="col-sm-8" dir="auto">@Html.Raw(Smartstore.Utilities.Html.HtmlUtility.ConvertPlainTextToHtml(item.Comments))</dd>
-                </dl>
+        <li class="return-request-item mb-3" aria-labelledby="return-request-title@(item.Id)">
+            <div class="card shadow-sm">
+                <div class="card-body">
+                    <div id="return-request-title@(item.Id)" class="card-title h4 mb-4">
+                        @T("Account.CustomerReturnRequests.Title", item.Id, item.ReturnRequestStatus)
+                    </div>
+                    <dl class="row mb-0" role="presentation">
+                        <dt class="col-sm-4 font-weight-400 text-muted">@T("Account.CustomerReturnRequests.Item")</dt>
+                        <dd class="col-sm-8">
+                            <a href="@item.ProductUrl" title="@T("Products.Details")" sm-language-attributes-for="item.ProductName">@item.ProductName</a>
+                        </dd>
+                        <dt class="col-sm-4 font-weight-400 text-muted">@T("Products.Qty")</dt>
+                        <dd class="col-sm-8">@item.Quantity</dd>
+                        <dt class="col-sm-4 font-weight-400 text-muted">@T("Account.CustomerReturnRequests.Reason")</dt>
+                        <dd class="col-sm-8">@item.ReturnReason</dd>
+                        <dt class="col-sm-4 font-weight-400 text-muted">@T("Account.CustomerReturnRequests.Action")</dt>
+                        <dd class="col-sm-8">@item.ReturnAction</dd>
+                        <dt class="col-sm-4 font-weight-400 text-muted">@T("Account.CustomerReturnRequests.Date")</dt>
+                        <dd class="col-sm-8">
+                            <time datetime="@item.CreatedOn.ToIso8601String()">@item.CreatedOn.ToNativeString()</time>
+                        </dd>
+                        @if (item.Comments.HasValue())
+                        {
+                            <dt class="col-sm-4 font-weight-400 text-muted">@T("Account.CustomerReturnRequests.Comments")</dt>
+                            <dd class="col-sm-8" dir="auto">@Html.Raw(HtmlUtility.ConvertPlainTextToHtml(item.Comments))</dd>
+                        }
+                    </dl>
+                </div>
             </div>
-        </div>
+        </li>
     }
-</div>
+</ul>
